--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,6 @@
         <file>CabTracker.qml</file>
         <file>Page1.qml</file>
         <file>Page1Form.ui.qml</file>
+        <file>media/ic_action_view_headline.png</file>
     </qresource>
 </RCC>
