--- a/qml.qrc
+++ b/qml.qrc
@@ -4,8 +4,7 @@
         <file>qtquickcontrols2.conf</file>
         <file>TwitterPage.qml</file>
         <file>CabTracker.qml</file>
-        <file>Page1.qml</file>
-        <file>Page1Form.ui.qml</file>
         <file>media/ic_action_view_headline.png</file>
+        <file>CometCabContainer.qml</file>
     </qresource>
 </RCC>
