well the bug is due to QML memory leaking. I need to rework the back end to deal with high memory usage from qml. Need to learn WorkerScripts to optimize code

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,6 @@
         <file>CabTracker.qml</file>
         <file>media/ic_action_view_headline.png</file>
         <file>CometCabContainer.qml</file>
+        <file>Twitter.js</file>
     </qresource>
 </RCC>
